6-12-13 | 7:53 PM | 1st Working Version
- changed file system to include "risk" folder
gatech/cs2340team2/risk/model
- changed file system folder "cs2340-team2" -> "cs2340team2" to avoid
java package problems with hyphens
- implemented + upgraded build file ('ant main' to do all at once)
- basic functionality on RiskServlet.java & start.jsp

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<title>Hello World!</title>
+<title>RISK Web App</title>
 </head>
 <body>
+<a href="/risk/startup">Goto Startup Screen</a>
 </body>
 </html>
